Configuração do ambiente de produção da API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,36 @@
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: mysql_container
+
+  apiusuarios:
+    build:
+      context: .               
+      dockerfile: Dockerfile  
+    container_name: apiusuarios_app
+    restart: always
+    ports:
+      - "8082:8082"
+    depends_on:
+      - oracle
+    networks:
+      - mynetwork
+
+  oracle:
+    image: gvenzl/oracle-xe:21-slim
+    container_name: oracle_container
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: apiusuarios
-      MYSQL_USER: user_coti
-      MYSQL_PASSWORD: coti
+      ORACLE_PASSWORD: coti
+      APP_USER: user_coti
+      APP_USER_PASSWORD: coti
     ports:
-      - "3308:3306"
+      - "1521:1521"
+      - "5500:5500"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - oracle_data:/opt/oracle/oradata
     networks:
       - mynetwork
 
 volumes:
-  mysql_data:
+  oracle_data:
 
 networks:
   mynetwork:
