--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.application.name=apiUsuarios
 # Tomcat
 server.port=8082
 
-# Datasource
-spring.datasource.url=jdbc:mysql://localhost:3308/apiusuarios?useSSL=false&serverTimezone=UTC
-spring.datasource.username=user_coti
-spring.datasource.password=coti
+# Datasource (MySQL)
+spring.datasource.url=jdbc:mysql://servermysqlcoti.mysql.database.azure.com:3306/api_usuarios?useSSL=true&serverTimezone=UTC
+spring.datasource.username=usermysql
+spring.datasource.password=Coti@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
